<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>husky_nav_ros2</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Husky robot navigation scripts (Navigator and Waypoint Recorder).</description>
  <maintainer email="dgranda2022@fau.edu">danielg</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>       <depend>geometry_msgs</depend>  <depend>sensor_msgs</depend>    <depend>builtin_interfaces</depend> <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>amcl_msgs</depend>
  <depend>map_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>

  <depend>python3-numpy</depend>
  <depend>python3-yaml</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
